# Mario-RL

./: .gitignore  LICENSE  README.md  ddqn-smb.ipynb  main.py  main_example.py  pyproject.toml  pyproject.toml.bak  requirements.txt  smb-ppo.ipynb  source.py  test.ipynb  wrappers.py
custom_packages/: gym_super_mario_bros-7.5.0-py3-none-any.whl  nes_py-8.3.0-cp311-cp311-win_amd64.whl
data/tb/DQN_1/: events.out.tfevents.1709725600.Sookeyy.58428.0
data/tb/DQN_2/: events.out.tfevents.1709725661.Sookeyy.53960.0
data/tb/DQN_3/: events.out.tfevents.1709748507.Sookeyy.5224.0
src/: agent.py  ddqn.py  generate_clips.py  q_val.py  rand_action.py  source.py  video.py  wrappers.py
