[tool.poetry]
name = "Mario-RL"
version = "0.1.0"
description = "Reinforcement learning using nes-py for Super Mario Bros"
authors = ["swappy <59965507+rycerzes@users.noreply.github.com>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
gym = {extras = ["other"], version = "^0.26.2"}
nes-py = "8.2.1"
gym-super-mario-bros = "7.4.0"
ipykernel = "^6.29.2"
pygame = "^2.5.2"
swig = "^4.2.0"
torch = { version = "2.2.0+cu121", source = "torch-cu121" }
stable-baselines3 = "2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.2"
torchrl = "^0.3.0"
gymnasium = "0.29.1"
moviepy = "1.0.3"

[[tool.poetry.source]]
name = "torch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
